--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "prettier": "^2.7.1"
   },
   "lint-staged": {
-    "*.[js, html]": ["eslint --fix", "prettier --write"]
+    "*.{js, html, css}": ["eslint --fix", "prettier --write"]
   }
 }
