--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint-fix": "eslint . --fix",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "browserslist": {
     "production": [
@@ -50,6 +51,9 @@
     "prettier": "^2.7.1"
   },
   "lint-staged": {
-    "*.{js, html, css}": ["eslint --fix", "prettier --write"]
+    "*.{js, html, css}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
